# Sistemas-Embebidos

boton+led/: boton+led.c  diagrama.json
bt_spp_acceptor/: CMakeLists.txt
bt_spp_acceptor/main/: main.c
ejemplo4/: slave.c
ejercios_tareas/ejercicio1/: CMakeLists.txt
ejercios_tareas/ejercicio1/main/: CMakeLists.txt  blink_example_main.c
practica_4/: master.c  slave.c
uart_echo_ejemplo/: CMakeLists.txt
uart_echo_ejemplo/main/: uart_echo_example_main.c
wifi_p5/: CMakeLists.txt
wifi_p5/main/: CMakeLists.txt  app.js  index.html  softap_example_main.c  style.css
